Microcorrection: using toList instead of collect(Collectors.toList())